# julep-buildathon

./: .env.example  LICENSE  README.md  interactive_character.ipynb  interactive_main.ipynb  pyproject.toml
storygenerator/: character.py  example_person.json  hero_writer.yaml  herostory_generator.ipynb  julep-story-example.py  linkedin_api.ipynb  linkedin_scraper.py  main.py  panel_generator.ipynb
