[tool.poetry]
name = "julep-buildathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "==6.29.5"
python-dotenv = "==1.0.1"
requests = "^2.32.3"
proxycurl-py = {extras = ["asyncio"], version = "^0.1.0.post2"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
