[tool.poetry]
name = "julep-buildathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "==6.29.5"
python-dotenv = "==1.0.1"
requests = "^2.32.3"
julep = "^1.19.0"
pyyaml = "^6.0.2"
replicate = "^1.0.2"
openai = "^1.52.0"
pillow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
